Description: If as example the thunderbird profile is deleted and was previously activated in the Certificate Path dialog, the dialog shows it still activated with the difference that it is now a manual profile and not a thunderbird profile. Steps to Reproduce: 1. Install and open thunderbird, so a thunderbird profile is created in the home directory (.thunderbird) 2. Open libreoffice, goto "Tools" -> "Options..." -> "Security" -> "Certificate" 3. In the opened Certificate Path dialog, the thunderbird profile is shown, activate the thunderbird profile 4. Close the dialog and libreoffice 5. Delete the .thunderbird folder in the home directory (or move it to somewhere) 6. Open libreoffice, goto "Tools" -> "Options..." -> "Security" -> "Certificate" Actual Results: In the opened Certificate Path dialog, the thunderbird profile is still shown, but marked as manual Expected Results: The thunderbird profile should not be shown anymore, as the profile folder does not exist anymore. Reproducible: Always User Profile Reset: No Additional Info:
https://git.libreoffice.org/core/+/6be961a7b6b5594b65f651522ef19f38bb9579aa%5E%21
A polite ping to Ilhan Yesil: Is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Otherwise, Could you please explain what's missing? Thanks
I believe we can close this issue as RESOLVED FIXED now