tdf#125553 Don't show deleted certificate folder in Certificate Path dialog

Added a check to ensure that certificate folder exists.

Change-Id: I351a58bbc606ac48eb9bdc85aaf0dbf8533a3d10